Fix bug 462317 - Crash [@strlen][@icalmemory_strdup] when closing a recursive event. r=philipp